deploy/kubernetes/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptobot-deployment
  labels:
    app: cryptobot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cryptobot
  template:
    metadata:
      labels:
        app: cryptobot
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: cryptobot
        image: python:3.9-slim-buster
        command: ["python", "trade/main.py"]
        securityContext:
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: app-volume
          mountPath: /app
      volumes:
      - name: app-volume
        configMap:
          name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: cryptobot-service
spec:
  selector:
    app: cryptobot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
